[gd_scene load_steps=5 format=3 uid="uid://bv6gh4mb2l2pc"]

[ext_resource type="Script" path="res://apps/pet/personality/scenes/personality.gd" id="1_prwdj"]
[ext_resource type="Script" path="res://interface/components/pill_range.gd" id="1_vw8o1"]
[ext_resource type="Script" path="res://apps/pet/personality/data/personality_data.gd" id="2_0us6o"]

[sub_resource type="Resource" id="Resource_yp51s"]
script = ExtResource("2_0us6o")
active = 3
clean = 1
playful = 5
smart = 2
social = 4

[node name="Personality" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_prwdj")
personality_data = SubResource("Resource_yp51s")

[node name="ActiveContainer" type="VBoxContainer" parent="."]
offset_right = 146.0
offset_bottom = 1792.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActiveRange" type="Range" parent="ActiveContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = false
light_mask = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 146.0
offset_bottom = 1711.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
hint_tooltip = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("1_vw8o1")
direction = 1
inverted = true
disabled = true

[node name="Label" type="Label" parent="ActiveContainer"]
offset_top = 1735.0
offset_right = 146.0
offset_bottom = 1792.0
text = "Active"
horizontal_alignment = 1

[node name="CleanContainer" type="VBoxContainer" parent="."]
offset_left = 170.0
offset_right = 316.0
offset_bottom = 1792.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CleanRange" type="Range" parent="CleanContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = false
light_mask = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 146.0
offset_bottom = 1711.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
hint_tooltip = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("1_vw8o1")
direction = 1
inverted = true
disabled = true

[node name="Label" type="Label" parent="CleanContainer"]
offset_top = 1735.0
offset_right = 146.0
offset_bottom = 1792.0
text = "Clean"
horizontal_alignment = 1

[node name="PlayfulContainer" type="VBoxContainer" parent="."]
offset_left = 340.0
offset_right = 487.0
offset_bottom = 1792.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayfulRange" type="Range" parent="PlayfulContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = false
light_mask = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 147.0
offset_bottom = 1711.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
hint_tooltip = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("1_vw8o1")
direction = 1
inverted = true
disabled = true

[node name="Label" type="Label" parent="PlayfulContainer"]
offset_top = 1735.0
offset_right = 147.0
offset_bottom = 1792.0
text = "Playful"
horizontal_alignment = 1

[node name="SmartContainer" type="VBoxContainer" parent="."]
offset_left = 511.0
offset_right = 657.0
offset_bottom = 1792.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SmartRange" type="Range" parent="SmartContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = false
light_mask = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 146.0
offset_bottom = 1711.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
hint_tooltip = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("1_vw8o1")
direction = 1
inverted = true
disabled = true

[node name="Label" type="Label" parent="SmartContainer"]
offset_top = 1735.0
offset_right = 146.0
offset_bottom = 1792.0
text = "Smart"
horizontal_alignment = 1

[node name="SocialContainer" type="VBoxContainer" parent="."]
offset_left = 681.0
offset_right = 828.0
offset_bottom = 1792.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SocialRange" type="Range" parent="SocialContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = false
light_mask = 1
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 147.0
offset_bottom = 1711.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
auto_translate = true
hint_tooltip = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("1_vw8o1")
direction = 1
inverted = true
disabled = true

[node name="Label" type="Label" parent="SocialContainer"]
offset_top = 1735.0
offset_right = 147.0
offset_bottom = 1792.0
text = "Social"
horizontal_alignment = 1
